--- a/thinking-cluster/build.gradle
+++ b/thinking-cluster/build.gradle
@@ -33,6 +33,10 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
+    compile("org.springframework.boot:spring-boot-starter-data-redis")
+
     compile group: 'com.google.guava', name: 'guava', version: '22.0'
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    compile group: 'org.apache.poi', name: 'poi', version: '3.0.2-FINAL'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
